@@ -43,7 +43,8 @@ import org.apache.tajo.storage.Tuple;
   example = "> SELECT lpad('hi', 5, 'xy');\n"
       + "xyxhi",
   returnType = TajoDataTypes.Type.TEXT,
-  paramTypes = {@ParamTypes(paramTypes = {TajoDataTypes.Type.TEXT, TajoDataTypes.Type.INT4, TajoDataTypes.Type.TEXT})}
+  paramTypes = {@ParamTypes(paramTypes = {TajoDataTypes.Type.TEXT, TajoDataTypes.Type.INT4}),
+                @ParamTypes(paramTypes = {TajoDataTypes.Type.TEXT, TajoDataTypes.Type.INT4, TajoDataTypes.Type.TEXT})}
 )
 public class Lpad extends GeneralFunction {
   @Expose private boolean hasFillCharacters;
